--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=SecurityYatra
 server.port=${PORT:8082}
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=never
+#server.servlet.session.timeout=30m
+#spring.security.oauth2.client.provider.google.issuer-uri=https://accounts.google.com
+spring.security.oauth2.client.registration.google.client-id=1097419666235-enihdi57jr944qrsoits9hojqemje2v3.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+#spring.security.oauth2.client.registration.google.scope=openid, profile, email
